# bifo

./: CITATION.cff  LICENSE  README.md  bifo-backup-$(date  pyproject.toml
src/bifo/: __init__.py  fetchChunckFromMips.py  fetchChunckFromMips_backup.py  trainTools.py
src/bifo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bifo/cellNav/: compareVastToZarrSeg.py  vast_to_zarr.py
src/bifo/cell_nav/: cn_tools.py  read_merge_mats.py
src/bifo/cell_nav/old/: cellNavToZarr.py
src/bifo/deeplearning/: bif_powder.py  loss_functions.py  lossfunctions.py  vw_inference.py
src/bifo/deeplearning/networks/: ms_v1.py  unetplusplus_rgc_short.py
src/bifo/diced/: dicedToZarr.py  diced_to_zarr.py  fetchChunckFromMips.py  infer_from_diced.py  notes.txt  vastTools.py
src/bifo/diced/old/: process_fetched_diced.py
src/bifo/image_process/: segment.py  watershed.py
src/bifo/networks/: ms_v1-2-3.py  vw_net.py  ww_net.py
src/bifo/networks/old/: ww_net.py
src/bifo/old/networks/old/: ms_v1_v2_v3.py  ms_v2.py  ms_v3.py  w_net.py
src/bifo/tools/: cn_tools.py  display.py  dtypes.py  napari_tools.py  progress.pkl  py_tools.py  trainTools.py  train_tools.py  voxTools.py  vox_tools.py  zarrTools.py  zarr_tools.py
src/bifo/tools/old/: zarrTools.py
