[project]
name = "bifo"
version = "0.1.0"
description = "Collection of biological image processing modules tangentially related to bifoveate retinas"
authors = [{ name = "Josh L. Morgan", email = "chilopod@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/josh-l-morgan/bifo"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]